[package]
name = "snarkvm-circuit"
version = "1.0.0"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "Circuits for a decentralized virtual machine"
homepage = "https://aleo.org"
repository = "https://github.com/AleoNet/snarkVM"
keywords = [
  "aleo",
  "cryptography",
  "blockchain",
  "decentralized",
  "zero-knowledge"
]
categories = [
  "compilers",
  "cryptography",
  "mathematics",
  "wasm",
  "web-programming"
]
include = [ "Cargo.toml", "src", "README.md", "LICENSE.md" ]
license = "Apache-2.0"
edition = "2021"

[dependencies.snarkvm-circuit-account]
path = "./account"
version = "=1.0.0"

[dependencies.snarkvm-circuit-algorithms]
path = "./algorithms"
version = "=1.0.0"

[dependencies.snarkvm-circuit-collections]
path = "./collections"
version = "=1.0.0"

[dependencies.snarkvm-circuit-environment]
path = "./environment"
version = "=1.0.0"

[dependencies.snarkvm-circuit-network]
path = "./network"
version = "=1.0.0"

[dependencies.snarkvm-circuit-program]
path = "./program"
version = "=1.0.0"

[dependencies.snarkvm-circuit-types]
path = "./types"
version = "=1.0.0"
