[package]
name = "snarkvm-circuits"
version = "0.7.5"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "Circuits for a decentralized virtual machine"
homepage = "https://aleo.org"
repository = "https://github.com/AleoHQ/snarkVM"
keywords = [
    "aleo",
    "cryptography",
    "blockchain",
    "decentralized",
    "zero-knowledge"
]
categories = [ "compilers", "cryptography", "mathematics", "wasm", "web-programming" ]
include = [ "Cargo.toml", "src", "README.md", "LICENSE.md" ]
license = "GPL-3.0"
edition = "2021"

[[bench]]
name = "linear_combination"
path = "benches/linear_combination.rs"
harness = false

[dependencies.snarkvm-circuits-environment]
path = "./environment"
version = "0.7.5"

[dependencies.snarkvm-curves]
path = "../curves"
version = "0.7.5"
default-features = false

[dependencies.snarkvm-fields]
path = "../fields"
version = "0.7.5"
default-features = false

[dependencies.snarkvm-utilities]
path = "../utilities"
version = "0.7.5"
default-features = false

[dependencies.itertools]
version = "0.10.1"

[dependencies.num-traits]
version = "0.2"
default-features = false

[dependencies.once_cell]
version = "1.8.0"

[dev-dependencies.criterion]
version = "0.3"

[dev-dependencies.rand]
version = "0.8"

[features]
default = [
    "snarkvm-curves/default",
    "snarkvm-fields/default",
    "snarkvm-utilities/default",
]
