[package]
name = "snarkvm-circuits"
version = "0.7.5"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "Circuits for a decentralized virtual machine"
homepage = "https://aleo.org"
repository = "https://github.com/AleoHQ/snarkVM"
keywords = [
    "aleo",
    "cryptography",
    "blockchain",
    "decentralized",
    "zero-knowledge"
]
categories = [ "compilers", "cryptography", "mathematics", "wasm", "web-programming" ]
include = [ "Cargo.toml", "src", "README.md", "LICENSE.md" ]
license = "GPL-3.0"
edition = "2021"

[[bench]]
name = "linear_combination"
path = "benches/linear_combination.rs"
harness = false

[dependencies.snarkvm-circuits-address]
path = "./address"
version = "0.7.5"

[dependencies.snarkvm-circuits-boolean]
path = "./boolean"
version = "0.7.5"

[dependencies.snarkvm-circuits-environment]
path = "./environment"
version = "0.7.5"

[dependencies.snarkvm-circuits-field]
path = "./field"
version = "0.7.5"

[dependencies.snarkvm-circuits-group]
path = "./group"
version = "0.7.5"

[dependencies.snarkvm-circuits-integers]
path = "./integers"
version = "0.7.5"

[dependencies.snarkvm-circuits-scalar]
path = "./scalar"
version = "0.7.5"

[dev-dependencies.criterion]
version = "0.3"
