[package]
name = "snarkvm-circuits"
version = "0.7.5"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "Circuits for a decentralized virtual machine"
homepage = "https://aleo.org"
repository = "https://github.com/AleoHQ/snarkVM"
keywords = [
    "aleo",
    "cryptography",
    "blockchain",
    "decentralized",
    "zero-knowledge"
]
categories = [ "compilers", "cryptography", "mathematics", "wasm", "web-programming" ]
include = [ "Cargo.toml", "src", "README.md", "LICENSE.md" ]
license = "GPL-3.0"
edition = "2021"

[dependencies.snarkvm-circuits-core]
path = "./core"
version = "0.7.5"

[dependencies.snarkvm-circuits-edge]
path = "./edge"
version = "0.7.5"

[dependencies.snarkvm-circuits-environment]
path = "./environment"
version = "0.7.5"

[dependencies.snarkvm-circuits-types]
path = "./types"
version = "0.7.5"

[dependencies.snarkvm-utilities]
path = "../utilities"
version = "0.7.5"
