[package]
name = "snarkvm-console"
version = "0.9.11"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "Console environment for a decentralized virtual machine"
license = "GPL-3.0"
edition = "2021"

[dependencies.snarkvm-console-account]
path = "./account"
version = "0.9.11"
optional = true

[dependencies.snarkvm-console-algorithms]
path = "./algorithms"
version = "0.9.11"
optional = true

[dependencies.snarkvm-console-collections]
path = "./collections"
version = "0.9.11"
optional = true

[dependencies.snarkvm-console-network]
path = "./network"
version = "0.9.11"
optional = true

[dependencies.snarkvm-console-program]
path = "./program"
version = "0.9.11"
optional = true

[dependencies.snarkvm-console-types]
path = "./types"
version = "0.9.11"
optional = true

[features]
default = [
  "parallel",
  "account",
  "algorithms",
  "collections",
  "network",
  "program",
  "types"
]
parallel = [ "snarkvm-console-collections/parallel" ]
wasm = [ "snarkvm-console-network/wasm" ]
test = [ "snarkvm-console-program/test" ]
account = [ "network", "snarkvm-console-account" ]
algorithms = [ "snarkvm-console-algorithms" ]
collections = [ "algorithms", "snarkvm-console-collections" ]
network = [ "collections", "snarkvm-console-network" ]
program = [ "network", "snarkvm-console-program" ]
types = [ "snarkvm-console-types" ]
