[package]
name = "snarkvm-console"
version = "1.0.0"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "Console environment for a decentralized virtual machine"
homepage = "https://aleo.org"
repository = "https://github.com/AleoNet/snarkVM"
license = "Apache-2.0"
edition = "2021"

[dependencies.snarkvm-console-account]
path = "./account"
version = "=1.0.0"
optional = true

[dependencies.snarkvm-console-algorithms]
path = "./algorithms"
version = "=1.0.0"
optional = true

[dependencies.snarkvm-console-collections]
path = "./collections"
version = "=1.0.0"
optional = true

[dependencies.snarkvm-console-network]
path = "./network"
version = "=1.0.0"
optional = true

[dependencies.snarkvm-console-program]
path = "./program"
version = "=1.0.0"
optional = true

[dependencies.snarkvm-console-types]
path = "./types"
version = "=1.0.0"
optional = true

[features]
default = [
  "account",
  "algorithms",
  "collections",
  "network",
  "program",
  "types"
]
wasm = [ "snarkvm-console-network/wasm" ]
test = [
  "snarkvm-console-account/test",
  "snarkvm-console-network/test",
  "snarkvm-console-program/test"
]
account = [ "network", "snarkvm-console-account" ]
algorithms = [ "snarkvm-console-algorithms" ]
collections = [ "algorithms", "snarkvm-console-collections" ]
network = [ "collections", "snarkvm-console-network" ]
program = [ "network", "snarkvm-console-program" ]
serial = [ "snarkvm-console-collections/serial" ]
types = [ "snarkvm-console-types" ]
