[package]
name = "snarkvm-curves"
version = "0.4.0"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "Curves for a decentralized virtual machine"
homepage = "https://aleo.org"
repository = "https://github.com/AleoHQ/snarkVM"
keywords = [
  "aleo",
  "cryptography",
  "blockchain",
  "decentralized",
  "zero-knowledge"
]
categories = [ "cryptography::cryptocurrencies", "operating-systems" ]
include = [ "Cargo.toml", "src", "README.md", "LICENSE.md" ]
license = "GPL-3.0"
edition = "2018"

[[bench]]
name = "curves"
path = "benches/curves.rs"
harness = false

[dependencies.snarkvm-fields]
path = "../fields"
version = "0.4.0"
default-features = false

[dependencies.snarkvm-utilities]
path = "../utilities"
version = "0.4.0"
default-features = false

[dependencies.derivative]
version = "2"

[dependencies.rand]
version = "0.8"
default-features = false

[dependencies.rand_xorshift]
version = "0.3"
default-features = false

[dependencies.serde]
version = "1.0.125"
default-features = false
features = [ "derive" ]

[dependencies.thiserror]
version = "1.0"

[dev-dependencies.criterion]
version = "0.3"

[dev-dependencies.rand]
version = "0.8"

[build-dependencies]
rustc_version = "0.3"

[features]
default = [ "snarkvm-fields/default", "snarkvm-utilities/default" ]
sw6 = [ ]
