[package]
name = "snarkvm-curves"
version = "0.7.5"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "Curves for a decentralized virtual machine"
homepage = "https://aleo.org"
repository = "https://github.com/AleoHQ/snarkVM"
keywords = [
  "aleo",
  "cryptography",
  "blockchain",
  "decentralized",
  "zero-knowledge"
]
categories = [ "compilers", "cryptography", "mathematics", "wasm", "web-programming" ]
include = [ "Cargo.toml", "src", "README.md", "LICENSE.md", "documentation/" ]
license = "GPL-3.0"
edition = "2021"

[[bench]]
name = "curves"
path = "benches/curves.rs"
harness = false

[dependencies.snarkvm-fields]
path = "../fields"
version = "0.7.5"
default-features = false

[dependencies.snarkvm-utilities]
path = "../utilities"
version = "0.7.5"
default-features = false

[dependencies.derivative]
version = "2"

[dependencies.rand]
version = "0.8"
default-features = false

[dependencies.serde]
version = "1.0.137"
default-features = false
features = [ "derive" ]

[dependencies.thiserror]
version = "1.0"

[dev-dependencies.bincode]
version = "1.3.3"

[dev-dependencies.criterion]
version = "0.3"

[dev-dependencies.rand]
version = "0.8"

[dev-dependencies.rand_xorshift]
version = "0.3"
default-features = false

[build-dependencies]
rustc_version = "0.4"

[features]
default = [ "snarkvm-fields/default", "snarkvm-utilities/default" ]
