[package]
name = "snarkvm-curves"
version = "0.14.0"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "Curves for a decentralized virtual machine"
homepage = "https://aleo.org"
repository = "https://github.com/AleoHQ/snarkVM"
keywords = [
  "aleo",
  "cryptography",
  "blockchain",
  "decentralized",
  "zero-knowledge"
]
categories = [
  "compilers",
  "cryptography",
  "mathematics",
  "wasm",
  "web-programming"
]
include = [
  "Cargo.toml",
  "src",
  "README.md",
  "LICENSE.md",
  "documentation/"
]
license = "Apache-2.0"
edition = "2021"

[[bench]]
name = "curves"
path = "benches/curves.rs"
harness = false

[dependencies.snarkvm-fields]
path = "../fields"
version = "=0.14.0"
default-features = false

[dependencies.snarkvm-utilities]
path = "../utilities"
version = "=0.14.0"
default-features = false

[dependencies.rand]
version = "0.8"
default-features = false

[dependencies.rayon]
version = "1"

[dependencies.serde]
version = "1.0.164"
default-features = false
features = [ "derive" ]

[dependencies.thiserror]
version = "1.0"

[dev-dependencies.bincode]
version = "1.3.3"

[dev-dependencies.criterion]
version = "0.5"

[dev-dependencies.rand]
version = "0.8"

[build-dependencies]
rustc_version = "0.4"

[features]
default = [ "snarkvm-fields/default", "snarkvm-utilities/default" ]
serial = [ "snarkvm-fields/serial" ]
