[package]
name = "snarkvm-derives"
version = "0.0.2"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "Canonical serialization for a decentralized virtual machine"
homepage = "https://aleo.org"
repository = "https://github.com/AleoHQ/snarkVM"
keywords = [
  "aleo",
  "cryptography",
  "blockchain",
  "decentralized",
  "zero-knowledge"
]
categories = [ "cryptography::cryptocurrencies", "operating-systems" ]
include = [ "Cargo.toml", "src", "README.md", "LICENSE.md" ]
license = "GPL-3.0"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
proc-macro-crate = { version = "0.1" }
proc-macro-error = { version = "1", default-features = false }
proc-macro2 = "1.0"
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
