[package]
name = "snarkvm-dpc"
version = "0.6.0"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "DPC for a decentralized virtual machine"
homepage = "https://aleo.org"
repository = "https://github.com/AleoHQ/snarkVM"
keywords = [
  "aleo",
  "cryptography",
  "blockchain",
  "decentralized",
  "zero-knowledge"
]
categories = [ "cryptography::cryptocurrencies", "operating-systems" ]
include = [ "Cargo.toml", "src", "README.md", "LICENSE.md" ]
license = "GPL-3.0"
edition = "2018"

[dependencies.snarkvm-algorithms]
path = "../algorithms"
version = "0.6.0"
default-features = false

[dependencies.snarkvm-curves]
path = "../curves"
version = "0.6.0"
default-features = false

[dependencies.snarkvm-fields]
path = "../fields"
version = "0.6.0"
default-features = false

[dependencies.snarkvm-gadgets]
path = "../gadgets"
version = "0.6.0"
default-features = false

[dependencies.snarkvm-marlin]
path = "../marlin"
version = "0.6.0"
default-features = false

[dependencies.snarkvm-parameters]
path = "../parameters"
version = "0.6.0"
default-features = false

[dependencies.snarkvm-polycommit]
path = "../polycommit"
version = "0.6.0"
default-features = false

[dependencies.snarkvm-profiler]
path = "../profiler"
version = "0.6.0"
default-features = false

[dependencies.snarkvm-r1cs]
path = "../r1cs"
version = "0.6.0"
default-features = false
optional = true

[dependencies.snarkvm-utilities]
path = "../utilities"
version = "0.6.0"
default-features = false

[dependencies.anyhow]
version = "1.0.41"

[dependencies.base58]
version = "0.1"

[dependencies.bech32]
version = "0.8"

[dependencies.bincode]
version = "1.3"

[dependencies.blake2]
version = "0.9"

[dependencies.chrono]
version = "0.4"
features = [ "serde" ]

[dependencies.derivative]
version = "2"

[dependencies.hex]
version = "0.4.3"

[dependencies.itertools]
version = "0.10.1"

[dependencies.once_cell]
version = "1.8.0"

[dependencies.rand]
version = "0.8"

[dependencies.serde]
version = "1.0"
features = [ "derive" ]

[dependencies.sha2]
version = "0.9"

[dependencies.thiserror]
version = "1.0"

[dev-dependencies.rand_xorshift]
version = "0.3"

[features]
default = [
  "full",
  "snarkvm-algorithms/default",
  "snarkvm-curves/default",
  "snarkvm-fields/default",
  "snarkvm-gadgets/default",
  "snarkvm-marlin/default",
  "snarkvm-parameters/default",
  "snarkvm-utilities/default"
]
wasm = ["full", "snarkvm-algorithms/wasm", "snarkvm-gadgets/full"]
print-trace = ["snarkvm-profiler/print-trace"]
full = ["testnet1", "testnet2"]
testnet1 = ["snarkvm-r1cs"]
testnet2 = ["snarkvm-r1cs"]
