[package]
name = "snarkvm-dpc"
version = "0.7.5"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "DPC for a decentralized virtual machine"
homepage = "https://aleo.org"
repository = "https://github.com/AleoHQ/snarkVM"
keywords = [
  "aleo",
  "cryptography",
  "blockchain",
  "decentralized",
  "zero-knowledge"
]
categories = [ "cryptography::cryptocurrencies", "operating-systems" ]
include = [ "Cargo.toml", "src", "README.md", "LICENSE.md" ]
license = "GPL-3.0"
edition = "2018"

[[bench]]
name = "account"
path = "benches/account.rs"
harness = false

[[bench]]
name = "noop_program"
path = "benches/noop_program.rs"
harness = false

[[bench]]
name = "posw"
path = "benches/posw.rs"
harness = false

[[bench]]
name = "transaction"
path = "benches/transaction.rs"
harness = false

[dependencies.snarkvm-algorithms]
path = "../algorithms"
version = "0.7.5"
default-features = false

[dependencies.snarkvm-curves]
path = "../curves"
version = "0.7.5"
default-features = false

[dependencies.snarkvm-fields]
path = "../fields"
version = "0.7.5"
default-features = false

[dependencies.snarkvm-gadgets]
path = "../gadgets"
version = "0.7.5"
default-features = false

[dependencies.snarkvm-marlin]
path = "../marlin"
version = "0.7.5"
default-features = false

[dependencies.snarkvm-parameters]
path = "../parameters"
version = "0.7.5"
default-features = false

[dependencies.snarkvm-polycommit]
path = "../polycommit"
version = "0.7.5"
default-features = false

[dependencies.snarkvm-r1cs]
path = "../r1cs"
version = "0.7.5"
default-features = false

[dependencies.snarkvm-utilities]
path = "../utilities"
version = "0.7.5"
default-features = false

[dependencies.anyhow]
version = "1.0.44"

[dependencies.base58]
version = "0.2"

[dependencies.bech32]
version = "0.8"

[dependencies.bincode]
version = "1.3"

[dependencies.chrono]
version = "0.4"
features = [ "serde" ]

[dependencies.derivative]
version = "2"

[dependencies.hex]
version = "0.4.3"

[dependencies.itertools]
version = "0.10.1"

[dependencies.once_cell]
version = "1.8.0"

[dependencies.rand]
version = "0.8"

[dependencies.rayon]
version = "1"

[dependencies.serde]
version = "1.0"
features = [ "derive" ]

[dependencies.thiserror]
version = "1.0"

[dev-dependencies.criterion]
version = "0.3.5"

[dev-dependencies.rand_chacha]
version = "0.3"

[features]
default = [
  "full",
  "snarkvm-algorithms/default",
  "snarkvm-curves/default",
  "snarkvm-fields/default",
  "snarkvm-gadgets/default",
  "snarkvm-marlin/default",
  "snarkvm-parameters/default",
  "snarkvm-utilities/default"
]
wasm = [ "full", "snarkvm-algorithms/wasm", "snarkvm-gadgets/full", "snarkvm-parameters/wasm" ]
full = [ "testnet1", "testnet2" ]
testnet1 = []
testnet2 = []
