[package]
name = "snarkvm-dpc"
version = "0.7.5"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "DPC for a decentralized virtual machine"
homepage = "https://aleo.org"
repository = "https://github.com/AleoHQ/snarkVM"
keywords = [
  "aleo",
  "cryptography",
  "blockchain",
  "decentralized",
  "zero-knowledge"
]
categories = [ "compilers", "cryptography", "mathematics", "wasm", "web-programming" ]
include = [ "Cargo.toml", "src", "README.md", "LICENSE.md" ]
license = "GPL-3.0"
edition = "2021"

[[bench]]
name = "account"
path = "benches/account.rs"
harness = false

[[bench]]
name = "block"
path = "benches/block.rs"
harness = false

[[bench]]
name = "posw"
path = "benches/posw.rs"
harness = false

[[bench]]
name = "record"
path = "benches/record.rs"
harness = false

[[bench]]
name = "transaction"
path = "benches/transaction.rs"
harness = false

[dependencies.snarkvm-algorithms]
path = "../algorithms"
version = "0.7.5"
default-features = false

[dependencies.snarkvm-curves]
path = "../curves"
version = "0.7.5"
default-features = false

[dependencies.snarkvm-fields]
path = "../fields"
version = "0.7.5"
default-features = false

[dependencies.snarkvm-gadgets]
path = "../gadgets"
version = "0.7.5"
default-features = false

[dependencies.snarkvm-parameters]
path = "../parameters"
version = "0.7.5"
default-features = false

[dependencies.snarkvm-r1cs]
path = "../r1cs"
version = "0.7.5"
default-features = false

[dependencies.snarkvm-utilities]
path = "../utilities"
version = "0.7.5"
default-features = false

[dependencies.aleo-std]
version = "0.1.14"
optional = true
default-features = false

[dependencies.anyhow]
version = "1.0.57"

[dependencies.base58]
version = "0.2"

[dependencies.bech32]
version = "0.9"

[dependencies.bincode]
version = "1.3"

[dependencies.blake2]
version = "0.10"
default-features = false

[dependencies.derivative]
version = "2"

[dependencies.hex]
version = "0.4.3"

[dependencies.itertools]
version = "0.10.3"

[dependencies.once_cell]
version = "1.12.0"

[dependencies.rand]
version = "0.8"

[dependencies.rayon]
version = "1"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.serde_json]
version = "1.0"

[dependencies.thiserror]
version = "1.0"

[dependencies.time]
version = "0.3.9"

[dev-dependencies.criterion]
version = "0.3.5"

[dev-dependencies.rand_chacha]
version = "0.3"

[features]
default = [
  "full",
  "parallel",
  "snarkvm-algorithms/default",
  "snarkvm-curves/default",
  "snarkvm-fields/default",
  "snarkvm-gadgets/default",
  "snarkvm-parameters/default",
  "snarkvm-utilities/default"
]
full = [ "testnet1", "testnet2" ]
wasm = [ "testnet2", "snarkvm-algorithms/wasm", "snarkvm-gadgets/core", "snarkvm-parameters/wasm" ]
parallel = [
  "snarkvm-algorithms/parallel",
  "snarkvm-fields/parallel",
  "snarkvm-utilities/parallel"
]
profiler = [ "aleo-std/profiler" ]

testnet1 = []
testnet2 = []
