[package]
name = "snarkvm-errors"
version = "0.0.2"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "Errors for a decentralized virtual machine"
homepage = "https://aleo.org"
repository = "https://github.com/AleoHQ/snarkVM"
keywords = [
  "aleo",
  "cryptography",
  "blockchain",
  "decentralized",
  "zero-knowledge"
]
categories = [ "cryptography::cryptocurrencies", "operating-systems" ]
include = [ "Cargo.toml", "src", "README.md", "LICENSE.md" ]
license = "GPL-3.0"
edition = "2018"

[dependencies.base58]
version = "0.1"

[dependencies.bech32]
version = "0.6"

[dependencies.bincode]
version = "1.3.1"

[dependencies.curl]
version = "0.4.34"
optional = true

[dependencies.hex]
version = "0.4.2"

[dependencies.jsonrpc-core]
version = "17.0.0"

[dependencies.rocksdb]
version = "0.15.0"
optional = true

[dependencies.thiserror]
version = "1.0"

[dependencies.toml]
version = "0.5.6"

[dev-dependencies.curl]
version = "0.4.34"

[features]
default = [ "librocksdb", "remote" ]
librocksdb = [ "rocksdb" ]
remote = [ "curl" ]
