[package]
name = "snarkvm-errors"
version = "0.0.4"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "Errors for a decentralized virtual machine"
homepage = "https://aleo.org"
repository = "https://github.com/AleoHQ/snarkVM"
keywords = [
  "aleo",
  "cryptography",
  "blockchain",
  "decentralized",
  "zero-knowledge"
]
categories = [ "cryptography::cryptocurrencies", "operating-systems" ]
include = [ "Cargo.toml", "src", "README.md", "LICENSE.md" ]
license = "GPL-3.0"
edition = "2018"

[dependencies.base58]
version = "0.1"

[dependencies.bech32]
version = "0.6"

[dependencies.bincode]
version = "1.3.2"

[dependencies.curl]
version = "0.4.34"
optional = true

[dependencies.hex]
version = "0.4.2"

[dependencies.thiserror]
version = "1.0"

[dev-dependencies.curl]
version = "0.4.34"

[features]
default = [ "remote" ]
remote = [ "curl" ]
