[package]
name = "snarkvm-eval"
version = "0.5.4"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "IR for a decentralized virtual machine"
homepage = "https://aleo.org"
repository = "https://github.com/AleoHQ/snarkVM"
keywords = [
  "aleo",
  "cryptography",
  "blockchain",
  "decentralized",
  "zero-knowledge"
]
categories = [ "cryptography::cryptocurrencies", "operating-systems" ]
include = [ "Cargo.toml", "src", "README.md", "LICENSE.md" ]
license = "GPL-3.0"
edition = "2018"

[features]

[dependencies.anyhow]
version = "1.0"

[dependencies.snarkvm-ir]
version = "0.5.4"
path = "../ir"

[dependencies.snarkvm-fields]
version = "0.5.4"
path = "../fields"

[dependencies.snarkvm-gadgets]
version = "0.5.4"
path = "../gadgets"

[dependencies.snarkvm-r1cs]
version = "0.5.4"
path = "../r1cs"

[dependencies.snarkvm-curves]
version = "0.5.4"
path = "../curves"

[dependencies.snarkvm-utilities]
version = "0.5.4"
path = "../utilities"

[dependencies.snarkvm-dpc]
version = "0.5.4"
path = "../dpc"

[dependencies.thiserror]
version = "1.0"

[dependencies.indexmap]
version = "1.6.2"
