[package]
name = "snarkvm-fields"
version = "0.7.5"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "Fields for a decentralized virtual machine"
homepage = "https://aleo.org"
repository = "https://github.com/AleoHQ/snarkVM"
keywords = [
  "aleo",
  "cryptography",
  "blockchain",
  "decentralized",
  "zero-knowledge"
]
categories = [ "cryptography::cryptocurrencies", "operating-systems" ]
include = [ "Cargo.toml", "src", "README.md", "LICENSE.md" ]
license = "GPL-3.0"
edition = "2018"

[dependencies.snarkvm-utilities]
path = "../utilities"
version = "0.7.5"
default-features = false

[dependencies.anyhow]
version = "1.0"

[dependencies.bincode]
version = "1.3.3"

[dependencies.derivative]
version = "2"

[dependencies.rand]
version = "0.8"
default-features = false

[dependencies.rand_xorshift]
version = "0.3"
default-features = false

[dependencies.serde]
version = "1.0"
default-features = false
features = [ "derive" ]

[dependencies.thiserror]
version = "1.0"

[features]
default = [ "snarkvm-utilities/default" ]
