[package]
name = "snarkvm-frost"
version = "0.7.5"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "Implementation of FROST - Flexible Round-Optimised Threshold Signature"
homepage = "https://aleo.org"
repository = "https://github.com/AleoHQ/snarkVM"
keywords = [
  "aleo",
  "cryptography",
  "blockchain",
  "decentralized",
  "zero-knowledge"
]
categories = [ "compilers", "cryptography", "mathematics", "wasm", "web-programming" ]
include = [ "Cargo.toml", "src", "README.md", "LICENSE.md" ]
license = "GPL-3.0"
edition = "2021"

[dependencies.snarkvm-curves]
path = "../curves"
version = "0.7.5"
default-features = false

[dependencies.console]
package = "snarkvm-console"
path = "../console"
version = "0.7.5"
features = ["algorithms"]

[dependencies.snarkvm-fields]
path = "../fields"
version = "0.7.5"
default-features = false

[dependencies.snarkvm-parameters]
path = "../parameters"
version = "0.7.5"
optional = true
default-features = false

[dependencies.snarkvm-r1cs]
path = "../r1cs"
version = "0.7.5"
default-features = false

[dependencies.snarkvm-utilities]
path = "../utilities"
version = "0.7.5"
default-features = false

[dependencies.anyhow]
version = "1.0"

[dependencies.bincode]
version = "1"

[dependencies.derivative]
version = "2"
features = [ "use_core" ]

[dependencies.digest]
version = "0.10"

[dependencies.getrandom]
version = "0.2"
optional = true
features = [ "js" ]
default-features = false

[dependencies.hashbrown]
version = "0.12.1"

[dependencies.hex]
version = "0.4"

[dependencies.itertools]
version = "0.10.3"

[dependencies.rand]
version = "0.8"

[dependencies.rand_core]
version = "0.6"
default-features = false
optional = true

[dependencies.rand_chacha]
version = "0.3"
default-features = false

[dependencies.rayon]
version = "1"
optional = true

[dependencies.serde]
version = "1.0"
default-features = false
features = ["derive"]

[dependencies.smallvec]
version = "1.8"
default-features = false
features = [ "const_generics", "const_new" ]


[dev-dependencies.rand_xorshift]
version = "0.3"

[dev-dependencies.serde]
version = "1"
features = ["derive"]

[dev-dependencies.serde_json]
version = "1"
