[package]
name = "snarkvm-gadgets"
version = "0.7.5"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "Gadgets for a decentralized virtual machine"
homepage = "https://aleo.org"
repository = "https://github.com/AleoHQ/snarkVM"
keywords = [
  "aleo",
  "cryptography",
  "blockchain",
  "decentralized",
  "zero-knowledge"
]
categories = [ "compilers", "cryptography", "mathematics", "wasm", "web-programming" ]
include = [ "Cargo.toml", "src", "README.md", "LICENSE.md" ]
license = "GPL-3.0"
edition = "2021"

[dependencies.snarkvm-algorithms]
path = "../algorithms"
version = "0.7.5"
default-features = false

[dependencies.snarkvm-curves]
path = "../curves"
version = "0.7.5"
default-features = false

[dependencies.snarkvm-fields]
path = "../fields"
version = "0.7.5"
default-features = false

[dependencies.snarkvm-r1cs]
path = "../r1cs"
version = "0.7.5"
default-features = false

[dependencies.snarkvm-utilities]
path = "../utilities"
version = "0.7.5"
default-features = false

[dependencies.anyhow]
version = "1.0.57"

[dependencies.derivative]
version = "2"

[dependencies.itertools]
version = "0.10.3"

[dependencies.num-bigint]
version = "0.4.3"
default-features = false
optional = true

[dependencies.num-integer]
version = "0.1.45"
default-features = false
optional = true

[dependencies.num-traits]
version = "0.2"
default-features = false

[dependencies.thiserror]
version = "1.0"

[dev-dependencies.blake2]
version = "0.10"

[dev-dependencies.criterion]
version = "0.3"

[dev-dependencies.rand]
version = "0.8"

[dev-dependencies.rand_xorshift]
version = "0.3"
default-features = false

[dev-dependencies.rand_chacha]
version = "0.3"
default-features = false

[features]
default = [
  "core",
  "snarkvm-algorithms/default",
  "snarkvm-curves/default",
  "snarkvm-fields/default",
  "snarkvm-r1cs/default",
  "snarkvm-utilities/default",
]
core = [ "algorithms", "curves" ]
algorithms = [ ]
curves = [ ]
nonnative = [ "num-bigint", "num-integer" ]
