[package]
name = "snarkvm-ledger"
version = "0.13.0"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "A node ledger for a decentralized virtual machine"
homepage = "https://aleo.org"
repository = "https://github.com/AleoHQ/snarkVM"
keywords = [
  "aleo",
  "cryptography",
  "blockchain",
  "decentralized",
  "zero-knowledge"
]
categories = [ "cryptography", "web-programming" ]
license = "Apache-2.0"
edition = "2021"

[features]
default = [ "async", "rayon" ]
async = [ "ledger-query/async" ]
rocks = [ "ledger-store/rocks" ]
serial = [ "console/serial", "synthesizer/serial" ]
timer = [ "aleo-std/timer" ]

[dependencies.console]
package = "snarkvm-console"
path = "../console"
version = "=0.13.0"

[dependencies.synthesizer]
package = "snarkvm-synthesizer"
path = "../synthesizer"
version = "=0.13.0"

[dependencies.ledger-block]
package = "snarkvm-ledger-block"
path = "./block"
version = "=0.13.0"

[dependencies.ledger-query]
package = "snarkvm-ledger-query"
path = "./query"
version = "=0.13.0"
features = [ "query" ]

[dependencies.ledger-store]
package = "snarkvm-ledger-store"
path = "./store"
version = "=0.13.0"

[dependencies.aleo-std]
version = "0.1.18"
default-features = false

[dependencies.anyhow]
version = "1.0.70"

[dependencies.indexmap]
version = "2.0"
features = [ "rayon" ]

[dependencies.parking_lot]
version = "0.12"

[dependencies.rand]
version = "0.8"

[dependencies.rayon]
version = "1"
optional = true

[dependencies.time]
version = "0.3"

[dependencies.tracing]
version = "0.1"
